Fix video files field highlighting
Removed extra margin below copyrights button as a bonus.
HFP-405

--- a/styles/scss/application.scss
+++ b/styles/scss/application.scss
@@ -374,9 +374,10 @@ a {
   }
   .file {
     position: relative;
+    float: left;
 
-    .file {
-      float: left;
+    &.field {
+      float: none;
     }
     .thumbnail {
       display: inline-block;
@@ -518,7 +519,6 @@ a {
     line-height: $form-item-height-small;
     padding-right: $padding;
     padding-left: 0;
-    margin-bottom: $min-padding;
     clear: both;
     font-weight: normal;
 
